cmake_minimum_required(VERSION 3.13) # CMAKE (heading)
include(pico_sdk_import.cmake)# CMAKE -> PICO SDK (include)
project(piosequencer C CXX ASM) # CMAKE ("project")
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)
set(PICO_EXAMPLES_PATH ${PROJECT_SOURCE_DIR})
pico_sdk_init()
include(example_auto_set_url.cmake)
add_executable(piosequencer)# CMAKE (target)
pico_generate_pio_header(piosequencer ${CMAKE_CURRENT_LIST_DIR}/sequencer.pio OUTPUT_DIR ${CMAKE_CURRENT_LIST_DIR}/generated)# PICO SDK (PIO)
pico_enable_stdio_usb(piosequencer 1)# PICO SDK (USB)
pico_enable_stdio_uart(piosequencer 0)
pico_add_extra_outputs(piosequencer) #PICO SDK (UF2)
target_link_libraries(piosequencer pico_stdlib hardware_pio hardware_dma hardware_pwm)# CMAKE -> C (linker)

target_sources(piosequencer PRIVATE piosequencer.c) # CMAKE -> C (compiler)
